k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: seedwing-policy-server
  name: seedwing
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: seedwing-policy-server
    weight: 100
  wildcardPolicy: None
